Closed Bug 84541 Opened 25 years ago Closed 24 years ago

Components list should not jump when lower items unchecked

Categories

(CCK Graveyard :: CCK-General, defect, P2)

x86
Windows NT

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: blee, Assigned: smeredith)

Details

Attachments

(1 file)

(a request for UE improvement) In selecting components at the end of customization thru CCK Tool, the user gets to check/uncheck components in the list of check box items. When elevator is lowered to reveal all items at the bottom of the list and any one the items at the bottom is unchecked, the whole list jumps right back up. This requires the user to lower it again and again to uncheck each item at the bottom of the list.
Status: NEW → ASSIGNED
Target Milestone: --- → Future
Updating QA contact to me for half of the CCK bugs while bom-shik is gone.
QA Contact: blee → barrettl
qa to blee
QA Contact: barrettl → blee
Priority: -- → P2
Target Milestone: Future → ---
Priority: P2 → P3
Keywords: nsbeta1
Priority: P3 → P2
Keywords: nsbeta1nsbeta1+
Load balance --> smeredith, thx!
Assignee: shrutiv → smeredith
Status: ASSIGNED → NEW
The block of code to process widget onCommand commands was being executed every time. It shouldn't be executed when there is no onCommand command for that widget. The result is that the listbox was being cleared and re-initialized every time. Fixed by testing for the existant of a command for the widget before entering that block, which was probably what was originally inteded but implemented incorrectly.
r=mitchf
Checked in the fix.
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Verified fixed in 4/30 bld.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: