Support UTF-8 in pref editor XML file and extended chars in pref editor UI. http://bugscape.netscape.com/show_bug.cgi?id=12978 Fixed Components list should not jump when lower items unchecked. http://bugzilla.mozilla.org/show_bug.cgi?id=84541 Removed some obsolete files.